5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1706_3053.log
== TEST (2019-04-29 19:02:56) 
-- CODE:
p=float(input("valor do peso: ")
		  
-- ERROR:
File "XXXX", line 3
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:03:06) 
-- CODE:
p=float(input("valor do peso: "))
		  
-- ERROR:
File "XXXX", line 3
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:06:16) 
-- CODE:
p=float(input("valor do peso: "))
if((p>0)and(p<5000)
	print((p*0.03)+20)
	
-- ERROR:
File "XXXX", line 3
    print((p*0.03)+20)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:06:24) 
-- CODE:
p=float(input("valor do peso: "))
if((p>0)and(p<5000):
	print((p*0.03)+20)
	
-- ERROR:
File "XXXX", line 2
    if((p>0)and(p<5000):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:06:37) 
-- CODE:
p=float(input("valor do peso: "))
if((p>0)and(p<5000)):
	print((p*0.03)+20)
	
-- OUTPUT:
21.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:08:02) 
-- CODE:
p=float(input("valor do peso: "))
if((p>0)and(p<5000)):
	print((p*0.03)+20)
elif((p>5000)and(p<6000)):
	print((p*0.04)+25)
	
-- OUTPUT:
21.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:09:28) 
-- CODE:
p=float(input("valor do peso: "))
if((p>0)and(p<5000)):
	print((p*0.03)+20)
elif((p>5000)and(p<6000)):
	print((p*0.04)+25)
elif((p>6000)and(p<7000)):
	print((p*0.05)+30)
elif((p>7000)):
	print((p*0.06)+35)
-- OUTPUT:
21.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:10:34) 
-- CODE:
p=float(input("valor do peso: "))
if((p>0)and(p<5000)):
	print((p*0.03)+20)
elif((p>5000)and(p<6000)):
	print((p*0.04)+25)
elif((p>6000)and(p<7000)):
	print(round((p*0.05)+30, 2))
elif((p>7000)):
	print(round((p*0.06)+35, 2))
-- OUTPUT:
21.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:11:30) 
-- CODE:
p=float(input("valor do peso: "))
if((p>0)and(p<5000)):
	print(round((p*0.03)+20, 2))
elif((p>5000)and(p<6000)):
	print(round((p*0.04)+25, 2))
elif((p>6000)and(p<7000)):
	print(round((p*0.05)+30, 2))
elif((p>7000)):
	print(round((p*0.06)+35, 2))
-- EXECUTION TIME:
0.182002
-- TEST CASE 1:
---- input:
55
---- correct output:
21.65
---- user output:
21.65
-- TEST CASE 2:
---- input:
96523
---- correct output:
5826.38
---- user output:
5826.38
-- TEST CASE 3:
---- input:
22
---- correct output:
20.66
---- user output:
20.66
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
